force-app/main/default/objects/Leave_Summary__c/Leave_Summary__c.object-meta.xml
<CustomObject>
    <label>Leave Summary</label>
    <nameField>
        <displayFormat>LS-{000000}</displayFormat>
        <label>Leave Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>