force-app/main/default/objects/Leave_Summary__c/fields/Allocation2__c.field-meta.xml
<CustomField>
    <fullName>Allocation2__c</fullName>
    <defaultValue>25</defaultValue>
    <label>Allocation</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>