force-app/main/default/objects/Leave_Summary__c/fields/Approved_Annual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Approved_Annual_Leave__c</fullName>
    <inlineHelpText>Annual leave approved (days)</inlineHelpText>
    <label>Approved</label>
    <summarizedField>Leave_Request__c.Days__c</summarizedField>
    <summaryFilterItems>
        <field>Leave_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Leave_Request__c.Leave_Type__c</field>
        <operation>equals</operation>
        <value>Annual Leave</value>
    </summaryFilterItems>
    <summaryForeignKey>Leave_Request__c.Leave_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>