force-app/main/default/objects/Leave_Summary__c/fields/Awaiting_Approval__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Approval__c</fullName>
    <label>Awaiting Approval</label>
    <summarizedField>Leave_Request__c.Days__c</summarizedField>
    <summaryFilterItems>
        <field>Leave_Request__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Leave_Request__c.Leave_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>