force-app/main/default/objects/Leave_Summary__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),12,31)</defaultValue>
    <inlineHelpText>Employee end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>