force-app/main/default/objects/Leave_Summary__c/fields/Is_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Year__c</fullName>
    <formula>Year__c =  TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Year</label>
    <type>Checkbox</type>
</CustomField>