force-app/main/default/objects/Leave_Summary__c/fields/Leave_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Leave_Allocation__c</fullName>
    <formula>FLOOR(((End_Date__c - Start_Date__c) / (DATE(YEAR(Start_Date__c),12,31)-DATE(YEAR(Start_Date__c),1,1))) * 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>