force-app/main/default/objects/Leave_Summary__c/fields/Remaining_Annual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Annual_Leave__c</fullName>
    <formula>Allocation2__c - Approved_Annual_Leave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining annual leave allocation for this period.</inlineHelpText>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>