force-app/main/default/objects/Leave_Summary__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),1,1)</defaultValue>
    <inlineHelpText>Employee start date for period</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>